--- a/src/assets/i18n/Italian.json
+++ b/src/assets/i18n/Italian.json
@@ -1,33 +1,33 @@
 {
   "_STEP 1": "PAGE STEP 1",
-  "QUESTIONNAIRE_INSTRUCTIONS": "Quiz: Istruzioni",
-  "SELECT_LANGUAGE" : "Seleziona la tua lingua",
-  "FOLLOW_STEPS" : "Per rispondere al questionario, segui questi passaggi ",
-  "STEP_ONE_SELECT" : "1. Seleziona un paese ",
-  "STEP_ONE_EXPL" : "Scegli il tuo paese ",
-  "STEP_TWO_SELECT" : "2. Seleziona un profilo ",
-  "STEP_TWO_EXPL": "Per una maggiore precisione, ti faremo domande in base al tuo profilo ",
-  "STEP_THREE_SELECT" : "3. Rispondi a tutte le domande ",
-  "STEP_THREE_EXPL" : "Per ottenere i risultati è necessario che tu risponda a tutte le domande ",
-  "STEP_FOUR_SELECT": "4. Guarda i tuoi risultati! Salvali sul tuo dispositivo ",
-  "STEP_FOUR_EXPL" : "Alla fine del questionario potrai scaricare i risultati ",
-  "FINAL_SELECT_COUNTR" : "Seleziona un paese",
+  "QUESTIONNAIRE_INSTRUCTIONS": "Questionario: Istruzioni",
+  "SELECT_LANGUAGE" : "Scegli la tua lingua",
+  "FOLLOW_STEPS" : "Per compilare il questionario, segui questa procedura",
+  "STEP_ONE_SELECT" : "1. Scegli un Paese",
+  "STEP_ONE_EXPL" : "Scegli il tuo Paese",
+  "STEP_TWO_SELECT" : "2. Scegli un profilo",
+  "STEP_TWO_EXPL": "Per maggior esattezza, ti verranno fatte domande basate sul tuo profilo",
+  "STEP_THREE_SELECT" : "3. Rispondi tutte le domande",
+  "STEP_THREE_EXPL" : "Per ottenere risultati bisogna rispondere tutte le domande",
+  "STEP_FOUR_SELECT": "4. Guarda i tuoi risultati! Potrai salvarli sul tuo dispositivo",
+  "STEP_FOUR_EXPL" : "Dopo aver compilato l'intero questionario potrai scaricare i risultati",
+  "FINAL_SELECT_COUNTR" : "Scegli un Paese",
 
   "_STEP 2": "PAGE STEP 2",
-  "SELECT_PROFILE": "Seleziona profilo",
-  "SELECT_AREAS": "Seleziona aree ",
+  "SELECT_PROFILE": "Scegli un profilo",
+  "SELECT_AREAS": "Scegli le aree",
 
   "_STEP_4": "PAGE STEP 4",
   "RESULTS" : "Risultati",
-  "CONSIDER_RECOM": "Sulla base delle tue risposte, dovresti prendere in considerazione i seguenti consigli",
-  "DOWNLOAD" : "Scarica i risultati",
+  "CONSIDER_RECOM": "Le seguenti raccomandazioni sono basate sulle risposte fornite",
+  "DOWNLOAD" : "Scaricare i risultati",
   "GRAPH" : "Grafico",
-  "EXPL_GRAPH": "Rappresentazione grafica del punteggio ottenuto nelle aree selezionate. Un punteggio più alto significa una valutazione più positiva.",
-  "GRAPH_REC_WARNING" : "I consigli sono raggruppati per area. Tenere presente che se la valutazione risulta positiva è possibile che non si mostri nessuna raccomandazione.",
+  "EXPL_GRAPH": "Rappresentazione grafica dei punteggi ottenuti nelle aree scelte. Un punteggio più alto significa una valutazione più positiva.",
+  "GRAPH_REC_WARNING" : "Le raccomandazioni sono raggruppate per area. Tenere presente che se la valutazione risulta positiva potrebbe non mostrarsi nessuna raccomandazione.",
 
   "_MENU_STEPS": "MENU STEPPER",
-  "STEP_1" : "Spiegazione",
-  "STEP_2" : "Raccolta dati ",
+  "STEP_1" : "Nota esplicativa",
+  "STEP_2" : "Raccolta dei dati ",
   "STEP_3" : "Questionario",
   "STEP_4" : "Risultati"
 
