--- a/src/assets/i18n/English.json
+++ b/src/assets/i18n/English.json
@@ -18,6 +18,8 @@
   "SELECT_PROFILE": "Select a profile",
   "SELECT_AREAS": "Select areas",
 
+  "QUESTIONNAIRE": "Questionnaire",
+
   "_STEP_4": "PAGE STEP 4",
   "RESULTS" : "Results",
   "CONSIDER_RECOM": "Based on your answers, you should consider the following recommendations",
