--- a/src/assets/i18n/Italian.json
+++ b/src/assets/i18n/Italian.json
@@ -18,6 +18,8 @@
   "SELECT_PROFILE": "Scegli un profilo",
   "SELECT_AREAS": "Scegli le aree",
 
+  "QUESTIONNAIRE": "Risultati",
+
   "_STEP_4": "PAGE STEP 4",
   "RESULTS" : "Risultati",
   "CONSIDER_RECOM": "Le seguenti raccomandazioni sono basate sulle risposte fornite",
