--- a/src/assets/i18n/Spanish.json
+++ b/src/assets/i18n/Spanish.json
@@ -18,6 +18,8 @@
   "SELECT_PROFILE": "Seleccionar perfil",
   "SELECT_AREAS": "Seleccionar áreas",
 
+  "QUESTIONNAIRE": "Cuestionario",
+
   "_STEP_4": "PAGE STEP 4",
   "RESULTS" : "Resultados",
   "CONSIDER_RECOM": "En base a sus respuestas debe considerar las siguientes recomendaciones",
