--- a/src/assets/i18n/Italian.json
+++ b/src/assets/i18n/Italian.json
@@ -17,6 +17,10 @@
   "_STEP 2": "PAGE STEP 2",
   "SELECT_PROFILE": "Scegli un profilo",
   "SELECT_AREAS": "Scegli le aree",
+  "ERR_SELECT_PROF": "Seleziona un profilo e categorie",
+
+  "_STEP_3" : "PAGE STEP 3",
+  "ERR_ANSWER" : "Rispondi a tutte le domande",
 
   "QUESTIONNAIRE": "Questionario",
 
