shortened texts to adapt to mobile

--- a/src/assets/i18n/English.json
+++ b/src/assets/i18n/English.json
@@ -7,9 +7,9 @@
   "STEP_ONE_EXPL" : "Select your country",
   "STEP_TWO_SELECT" : "2. Select a profile",
   "STEP_TWO_EXPL": "For greater precision, we will ask you questions based on your profile ",
-  "STEP_THREE_SELECT" : "3. Answer all the questions",
+  "STEP_THREE_SELECT" : "3. Answer the questions",
   "STEP_THREE_EXPL" : "In order to obtain the results, it is necessary that you answer all the questions ",
-  "STEP_FOUR_SELECT": "4. See your results! Save them on your device",
+  "STEP_FOUR_SELECT": "4. See your results!",
   "STEP_FOUR_EXPL" : "At the end of this questionary you will be able to download your results",
   "FINAL_SELECT_COUNTR" : "Select a country",
   "ERR_SELECT_LANG" : "Select a country",
