--- a/src/assets/i18n/Italian.json
+++ b/src/assets/i18n/Italian.json
@@ -7,9 +7,9 @@
   "STEP_ONE_EXPL" : "Scegli il tuo Paese",
   "STEP_TWO_SELECT" : "2. Scegli un profilo",
   "STEP_TWO_EXPL": "Per maggior esattezza, ti verranno fatte domande basate sul tuo profilo",
-  "STEP_THREE_SELECT" : "3. Rispondi tutte le domande",
+  "STEP_THREE_SELECT" : "3. Rispondi le domande",
   "STEP_THREE_EXPL" : "Per ottenere risultati bisogna rispondere tutte le domande",
-  "STEP_FOUR_SELECT": "4. Guarda i tuoi risultati! Potrai salvarli sul tuo dispositivo",
+  "STEP_FOUR_SELECT": "4. Guarda i tuoi risultati!",
   "STEP_FOUR_EXPL" : "Dopo aver compilato l'intero questionario potrai scaricare i risultati",
   "FINAL_SELECT_COUNTR" : "Scegli un Paese",
   "ERR_SELECT_LANG" : "Scegli un Paese",
