--- a/src/assets/i18n/Spanish.json
+++ b/src/assets/i18n/Spanish.json
@@ -7,9 +7,9 @@
   "STEP_ONE_EXPL" : "Escoge tu país",
   "STEP_TWO_SELECT" : "2. Selecciona un perfil",
   "STEP_TWO_EXPL": "Para obtener una mayor precisión, te haremos preguntas basadas en tu perfil",
-  "STEP_THREE_SELECT" : "3. Responde todas las preguntas",
+  "STEP_THREE_SELECT" : "3. Responde las preguntas",
   "STEP_THREE_EXPL" : "Para poder obtener los resultados, es necesario que respondas a todas las preguntas",
-  "STEP_FOUR_SELECT": "4. Mira tus resultados! Guárdalos en tu dispositivo",
+  "STEP_FOUR_SELECT": "4. Mira tus resultados!",
   "STEP_FOUR_EXPL" : "Al final del cuestionario podrás descargar los resultados",
   "FINAL_SELECT_COUNTR" : "Seleciona un país",
   "ERR_SELECT_LANG" : "Seleccione un país",
